--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </style>
 </head>
 <body>
-    <h1>TradeTrends AI</h1>
+    <h1>TradeTrends</h1>
     <div class="container">
         <!-- Stock Data Input Section -->
         <div>
