--- a/index.html
+++ b/index.html
@@ -177,3 +177,31 @@
         } catch (error) {
                 console.error('Error fetching analyst data:', error);
         }
+        async function fetchStockData(symbol) {
+            try {
+                const response = await fetch(`/.netlify/functions/fetchStockData?symbol=${symbol}`);
+                if (!response.ok) {
+                    throw new Error(`Error fetching data: ${response.statusText}`);
+                }
+                const data = await response.json();
+                displayStockData(data);
+            } catch (error) {
+                console.error('Error:', error);
+                document.getElementById('stock-data').innerText = 'Failed to load stock data.';
+            }
+        }
+
+        function displayStockData(data) {
+            const stockDiv = document.getElementById('stock-data');
+            stockDiv.innerHTML = `
+                <p>Current Price: $${data.c}</p>
+                <p>High Price of the Day: $${data.h}</p>
+                <p>Low Price of the Day: $${data.l}</p>
+                <p>Open Price of the Day: $${data.o}</p>
+                <p>Previous Close Price: $${data.pc}</p>
+            `;
+        }
+
+        // Fetch data for a specific stock symbol, e.g., AAPL
+        fetchStockData('AAPL');
+    </script>
